# rust-emcee

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTERS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
benches/: benches.rs
examples/: basic.rs  fitting_a_model_to_data.rs
python-tests/: basic.py  fitting_a_model_to_data.py  multivariate.py  test_lnprob.py
src/: errors.rs  guess.rs  lib.rs  prob.rs  stores.rs  stretch.rs
