[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
name = "emcee"
version = "0.1.0"
description = "Implementation of Python's emcee affine-invariant mcmc ensemble sampler"
homepage = "https://github.com/mindriot101/rust-emcee"
repository = "https://github.com/mindriot101/rust-emcee"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/emcee"
categories = ["science"]

[dependencies]
rand = "0.3.15"

[dev-dependencies]
assert_approx_eq = "1.0.0"
